--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,7 +1,8 @@
 .header {
 	width: 100%;
-	display: flex;
 	padding: 41px 36px 0px 36px;
+	display: flex;
+	align-items: center;
 	justify-content: space-between;
 	&__username {
 		font-size: 1.6rem;
