--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,12 +1,21 @@
 .header {
+	position: relative;
 	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	height: 142px;
+	background: linear-gradient(
+		0deg,
+		rgba(34, 168, 210, 0.2) -115%,
+		rgba(255, 255, 255, 0) 100%
+	);
 	&__container {
-		padding: 41px 36px 0px 36px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 0px 36px;
+		padding-top: 29px;
 	}
 	&__username {
+		text-align: center;
 		font-size: 1.6rem;
 		font-weight: 600;
 	}
