--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,5 @@
 @import './components/container';
 @import './components/header';
 @import './components/balance';
+@import './components/transactions/transactions';
+@import './components/transactions/transactionItem';
