--- a/src/scss/components/_balance.scss
+++ b/src/scss/components/_balance.scss
@@ -1,7 +1,8 @@
 .balance {
 	width: 300px;
 	position: absolute;
-	top: 79px;
+	z-index: 10;
+	top: 75px;
 	left: calc(50% - 153px);
 	padding: 12px;
 	background-color: $white-color;
