--- a/src/scss/components/transactions/_transactions.scss
+++ b/src/scss/components/transactions/_transactions.scss
@@ -5,6 +5,7 @@
 	color: $white-color;
 	padding-top: 36px;
 	padding-bottom: 43px;
+	margin-bottom: 182px;
 	&__container {
 		padding-left: 53px;
 		padding-right: 61px;
