--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,5 +9,8 @@
 @import './components/container';
 @import './components/header';
 @import './components/balance';
+@import './components/button';
 @import './components/transactions/transactions';
 @import './components/transactions/transactionItem';
+@import './components/payment/payment';
+@import './components/payment/paymentRecord';
