--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,5 @@
 @import './components/transactions/transactionItem';
 @import './components/payment/payment';
 @import './components/payment/paymentRecord';
+@import './components/movements/movements';
+@import './components/movements/movement';
