--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,3 +16,5 @@
 @import './components/payment/paymentRecord';
 @import './components/movements/movements';
 @import './components/movements/movement';
+@import './components/navbar/navbar';
+@import './components/navbar/navbarItem';
