--- a/src/scss/components/movements/_movement.scss
+++ b/src/scss/components/movements/_movement.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	padding: 8px 24px 8px 18px;
 	border-bottom: 0.5px solid #bbb;
-	margin-bottom: 10px;
+	padding-bottom: 10px;
 	&__details {
 		display: flex;
 		gap: 16px;
