--- a/src/scss/components/navbar/_navbar.scss
+++ b/src/scss/components/navbar/_navbar.scss
@@ -1,13 +1,16 @@
 .navbar {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	&__container {
+		background-color: $white-color;
 		padding-top: 18px;
 		padding-left: 32px;
 		padding-right: 28px;
 		border-radius: 10px;
+		border-bottom-left-radius: 0px;
+		border-bottom-right-radius: 0px;
 		border: solid 0.5px rgba(9, 22, 31, 0.3);
 	}
 	&__list {
