--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -8,3 +8,16 @@
 	border-radius: 4px;
 	border: none;
 }
+
+.button--large {
+	@extend .button;
+	width: 100%;
+}
+
+.button--big {
+	@extend .button;
+	font-size: 2rem;
+	padding: 14px;
+	text-align: center;
+	line-height: normal;
+}
