💄 added circle calculation

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import './components/movements/movement';
 @import './components/navbar/navbar';
 @import './components/navbar/navbarItem';
+@import './components/circularCalculation';
 
 /* PAGES */
 
