--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,17 +7,31 @@
 		rgba(34, 168, 210, 0.2) -115%,
 		rgba(255, 255, 255, 0) 100%
 	);
+	@media (min-width: 1024px) {
+		height: 180px;
+	}
 	&__container {
 		display: flex;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: flex-end;
 		padding: 0px 36px;
 		padding-top: 29px;
+		@media (min-width: 1024px) {
+			justify-content: space-between;
+		}
+	}
+	&__user {
+		display: flex;
 	}
 	&__username {
 		text-align: center;
 		font-size: 1.6rem;
 		font-weight: 600;
+		margin-right: 90px;
+		@media (min-width: 1024px) {
+			font-size: 1rem;
+			margin-right: 10px;
+		}
 	}
 	&__userphoto {
 		border-radius: 100%;
