--- a/src/scss/components/movements/_movements.scss
+++ b/src/scss/components/movements/_movements.scss
@@ -20,5 +20,9 @@
 	&__list {
 		max-height: 300px;
 		overflow: auto;
+		@media (min-width: 1024px) {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+		}
 	}
 }
