--- a/src/scss/components/transactions/_transactions.scss
+++ b/src/scss/components/transactions/_transactions.scss
@@ -6,6 +6,10 @@
 	padding-top: 36px;
 	padding-bottom: 43px;
 	margin-bottom: 175px;
+	@media (min-width: 1024px) {
+		padding: 80px;
+		margin-bottom: 60px;
+	}
 	&__container {
 		padding-left: 53px;
 		padding-right: 61px;
@@ -14,5 +18,12 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		@media (min-width: 1024px) {
+			max-width: 300px;
+			position: absolute;
+			top: 20px;
+			left: 0;
+			right: 0;
+		}
 	}
 }
