--- a/src/scss/pages/_provision.scss
+++ b/src/scss/pages/_provision.scss
@@ -1,4 +1,5 @@
 .provision {
+	padding: 0px 36px;
 	padding-top: 72px;
 	padding-bottom: 31px;
 	position: relative;
@@ -8,9 +9,6 @@
 		rgba(255, 255, 255, 0) 1%,
 		rgba(34, 168, 210, 0.1)
 	);
-	&__container {
-		padding: 0px 36px;
-	}
 	&__navigate {
 		display: flex;
 		justify-content: space-between;
@@ -41,9 +39,29 @@
 		line-height: 1.79;
 		margin-bottom: 26px;
 		margin-top: 18px;
+		@media (min-width: 1024px) {
+			text-align: center;
+		}
 	}
-	&__months {
-		@extend .provision__container;
+	&__details {
+		@media (min-width: 1024px) {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			align-items: center;
+		}
+	}
+	&__button {
+		@media (min-width: 1024px) {
+			display: none;
+		}
+	}
+	&__button-desktop {
+		display: none;
+		@media (min-width: 1024px) {
+			display: grid;
+			max-width: 400px;
+			margin: 0 auto;
+		}
 	}
 }
 
